# CAB401A1

./: .gitignore  CMakeLists.txt  Makefile  shell.nix
include/: VulkanContext.hpp  common.hpp
shaders/: shader.comp
src/: VulkanContext.cpp  common.cpp  cpu.cpp  omp.cpp  sequential.cpp  vulkan.cpp
